--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ google-generativeai==0.3.2
 python-dotenv==1.0.1
 rich==13.3.1
 SpeechRecognition==3.10.0
-PyAudio==0.2.11 
+PyAudio==0.2.11
+gTTS==2.5.1 
