--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ google-generativeai==0.3.2
 python-dotenv==1.0.1
 rich==13.3.1
 SpeechRecognition==3.10.0
-PyAudio==0.2.11
+PyAudio==0.2.11 --no-deps
 gTTS==2.5.1
 pytz==2024.1
 setuptools==57.5.0 
