--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,8 @@ google-generativeai==0.3.2
 python-dotenv==1.0.1
 rich==13.3.1
 SpeechRecognition==3.10.0
-wheel==0.37.1
-setuptools==57.5.0
-portaudio19-dev
-python3-pyaudio
+PyAudio==0.2.11
 gTTS==2.5.1
-pytz==2024.1 
+pytz==2024.1
+wheel==0.37.1
+setuptools==57.5.0 
