--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 streamlit==1.32.0
 cohere==4.37
 python-dotenv==1.0.1
+rich==13.3.1
 SpeechRecognition==3.10.0
 PyAudio==0.2.11
 gTTS==2.5.1
-setuptools==58.2.0
+pytz==2024.1
+wheel==0.37.1
+setuptools==57.5.0 
